--- a/public/index.html
+++ b/public/index.html
@@ -5,42 +5,32 @@
 <head>
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<!-- <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"> -->
-	 <!-- <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" /> -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-beta.2/angular-sanitize.js"></script>
-	<script src="js/app.js"></script>
-	<script src="controller/loginController.js"></script>
-	<script src="controller/signupController.js"></script>
-	<script src="controller/dashboardController.js"></script>
-
-	<link rel="stylesheet" type="text/css" href="css/index.css">
+	 <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
+	 <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-<!-- define angular controller -->
-<!-- <body ng-controller="loginController"> -->
-	<!-- <body ng-controller="signupController"> -->
-
 	<!-- MAIN CONTENT AND INJECTED VIEWS -->
 	<div id="main">
-
-		<div ng-view></div>
+		<div ui-view></div>
+		</div>
 		<!-- angular templating -->
 		<!-- this is where content will be injected -->
-	</div>
 </body>
 
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="bower_components/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
+		<script type="text/javascript" src="bower_components/angular/angular.js"></script>
+		<script  src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+		<script src="bower_components/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
+		<!-- <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script> -->
 
-<!-- <script>
+		<!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script> -->
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-beta.2/angular-sanitize.js"></script>
 
-$("#menu-toggle").click(function(e) {
-        e.preventDefault();
-        $("#wrapper").toggleClass("toggled");
-    });
-		</script> -->
+		<script src="js/app.js"></script>
+		<script src="controller/loginController.js"></script>
+		<script src="controller/signupController.js"></script>
+		<script src="controller/dashboardController.js"></script>
+		<script src="directives/dashboarddirective.js"></script>
+		<script src="controller/popupController.js"></script>
 </html>
