updated on 27th May

--- a/public/html/bridgelabz.html
+++ b/public/html/bridgelabz.html
@@ -73,7 +73,12 @@
 
 
 
+<!-- <div class="col-sm-12">
+<div class="col-xs-3" style="border:3px solid red;display :inline-block;"></div>
+<div class ="col-xs-6" style="border:3px solid pink;display :inline-block;"></div>
+  <div class="col-xs-3" style="border:3px solid blue"></div></div> -->
 
+/////////////////////
 <!-- <footer class="w3-container w3-blue">
 <h5>Footer</h5>
 </footer> -->
