--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <html ng-app="myApp">
 
+
 <head>
+	  <title>mykeep</title>
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	 <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
 	 <link rel="stylesheet" type="text/css" href="css/index.css">
+	 <link rel="stylesheet" href="css/style.css">
+	 <link rel="stylesheet" href="css/dashboard.css">
+	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 	<!-- MAIN CONTENT AND INJECTED VIEWS -->
@@ -27,10 +33,12 @@
 		<!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script> -->
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-beta.2/angular-sanitize.js"></script>
 
+
 		<script src="js/app.js"></script>
+		<script src="js/logout.js"></script>
 		<script src="controller/loginController.js"></script>
 		<script src="controller/signupController.js"></script>
 		<script src="controller/dashboardController.js"></script>
 		<script src="directives/dashboarddirective.js"></script>
-		<script src="controller/popupController.js"></script>
+		<!-- <script src="controller/popupController.js"></script> -->
 </html>
