--- a/public/html/login.html
+++ b/public/html/login.html
@@ -1,13 +1,9 @@
 <header>
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
+  <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color: rgba(6,6,6,1);" role="navigation">
+      <div class="container-fluid">
           <div class="navbar-header">
             <a class="navbar-brand" href="#home">My Keep</a>
-          </div>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#login"><span class="fa fa-shield"></span> LOGIN</a></li>
-            <li><a href="#signup"><span class="fa fa-comment"></span> signup</a></li>
-          </ul>
+
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                   <span class="sr-only">Toggle navigation</span>
                   <span class="icon-bar"></span>
@@ -16,20 +12,21 @@
               </button>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
-
-
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="#login"><span class="fa fa-shield" aria-hidden="true"></span> Login</a></li>
+                <li><a href="#signup"><span class="fa fa-comment" aria-hidden="true"></span> signup</a></li>
+              </ul>
           </div>
       </div>
   </nav>
-
-  </header>
+</header>
 
 
 <div class = "container-fluid">
 <div class="login-page">
   <div class="form">
 
-    <form name="loginform" ng-controller="loginController">
+    <form name="loginform" ng-controller="loginController" style="margin-top:14%">
 
       <p>
       <input type="email" name="emailid" id="exampleInputEmaillog" placeholder="Email"  ng-model="emailid" required>
