--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,9 @@
 
 <head>
 	  <title>mykeep</title>
-	<meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="utf-8">
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	 <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
 	 <link rel="stylesheet" type="text/css" href="css/index.css">
 	 <link rel="stylesheet" href="css/style.css">
@@ -33,8 +34,9 @@
 		<!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script> -->
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-beta.2/angular-sanitize.js"></script>
 
+	<script src="js/app.js"></script>
+<script src="services/dashboardServices.js"></script>
 
-		<script src="js/app.js"></script>
 		<script src="js/logout.js"></script>
 		<script src="controller/loginController.js"></script>
 		<script src="controller/signupController.js"></script>
