updated on 31st May

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
 	 <link rel="stylesheet" href="css/style.css">
 	 <link rel="stylesheet" href="css/dashboard.css">
 	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	 <link rel="stylesheet" href="bower_components/angular-bootstrap-datetimepicker/src/css/datetimepicker.css">
+
+
 </head>
 <body>
 	<!-- MAIN CONTENT AND INJECTED VIEWS -->
@@ -29,15 +32,17 @@
 		<script type="text/javascript" src="bower_components/angular/angular.js"></script>
 		<script  src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 		<script src="bower_components/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
-		<!-- <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script> -->
 
-		<!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script> -->
+		<script src="bower_components/moment/moment.js"></script>
+		<script src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js" type="text/javascript"></script>
+		<script src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.templates.js"></script>
+		<script src="https://packery.metafizzy.co/packery.pkgd.min.js"></script>
+		<script src="https://draggabilly.desandro.com/draggabilly.pkgd.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-beta.2/angular-sanitize.js"></script>
 
 	<script src="js/app.js"></script>
-<script src="services/dashboardServices.js"></script>
+	<script src="services/dashboardServices.js"></script>
 
-		<script src="js/logout.js"></script>
 		<script src="controller/loginController.js"></script>
 		<script src="controller/signupController.js"></script>
 		<script src="controller/dashboardController.js"></script>
