--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <html ng-app="myApp">
-
 
 <head>
 	  <title>mykeep</title>
@@ -13,18 +11,16 @@
 	 <link rel="stylesheet" type="text/css" href="css/index.css">
 	 <link rel="stylesheet" href="css/style.css">
 	 <link rel="stylesheet" href="css/dashboard.css">
+	 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/ng-img-crop/0.3.2/ng-img-crop.css">
 	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	 <link rel="stylesheet" href="bower_components/angular-bootstrap-datetimepicker/src/css/datetimepicker.css">
 
 
 </head>
 <body>
-	<!-- MAIN CONTENT AND INJECTED VIEWS -->
-	<div id="main">
+	<div id="main"> <!-- MAIN CONTENT AND INJECTED VIEWS -->
 		<div ui-view></div>
-		</div>
-		<!-- angular templating -->
-		<!-- this is where content will be injected -->
+		</div>	<!-- angular templating --><!-- this is where content will be injected -->
 </body>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -32,6 +28,7 @@
 		<script type="text/javascript" src="bower_components/angular/angular.js"></script>
 		<script  src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 		<script src="bower_components/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
+		  <script src="https://cdnjs.cloudflare.com/ajax/libs/ng-img-crop/0.3.2/ng-img-crop.js"></script>
 
 		<script src="bower_components/moment/moment.js"></script>
 		<script src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js" type="text/javascript"></script>
@@ -40,12 +37,12 @@
 		<script src="https://draggabilly.desandro.com/draggabilly.pkgd.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-beta.2/angular-sanitize.js"></script>
 
-	<script src="js/app.js"></script>
-	<script src="services/dashboardServices.js"></script>
+		<script src="js/app.js"></script>
+		<script src="services/dashboardServices.js"></script>
 
 		<script src="controller/loginController.js"></script>
 		<script src="controller/signupController.js"></script>
 		<script src="controller/dashboardController.js"></script>
 		<script src="directives/dashboarddirective.js"></script>
-		<!-- <script src="controller/popupController.js"></script> -->
+		<script src="controller/profileImageController.js"></script>
 </html>
